--- a/manifest.json
+++ b/manifest.json
@@ -6,18 +6,10 @@
   "version": "1.0",
 
   "permissions": [
-    "downloads",
-    "webRequest",
-    "*://y.qq.com/",
-    "*://y.qqmusic.com/"
+    "<all_urls>","webRequest","webRequestBlocking", "downloads"
   ],
-
   "background": {
-    "scripts": ["background.js"]
-  },
-
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "scripts": ["background.js"],
+    "persistent": true
   }
 }
